Fixed horizontal scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  padding-left: 0;
+  padding-right: 0;
+  width: 1000px;
+  max-width: inherit;
+}
